--- a/pokedex/Base.lproj/Main.storyboard
+++ b/pokedex/Base.lproj/Main.storyboard
@@ -1,14 +1,18 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="pokedex" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +20,103 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lPi-vt-0VD">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="65"/>
+                                <color key="backgroundColor" red="1" green="0.34509803921568627" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="65" id="0PM-8t-y3J"/>
+                                </constraints>
+                            </view>
+                            <searchBar contentMode="redraw" searchBarStyle="minimal" translatesAutoresizingMaskIntoConstraints="NO" id="FJN-vk-1Jg">
+                                <rect key="frame" x="0.0" y="65" width="375" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="C2e-Kn-K1q"/>
+                                </constraints>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg" translatesAutoresizingMaskIntoConstraints="NO" id="4pw-r5-yEr">
+                                <rect key="frame" x="0.0" y="109" width="375" height="558"/>
+                            </imageView>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="7IE-mr-0xF">
+                                <rect key="frame" x="20" y="129" width="335" height="518"/>
+                                <color key="backgroundColor" white="1" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="gPp-qd-OYj">
+                                    <size key="itemSize" width="105" height="105"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" alpha="0.80000000000000004" contentMode="center" reuseIdentifier="PokeCell" id="UgP-CN-Fgo" customClass="PokeCell" customModule="pokedex" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="105" height="105"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="105" height="105"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="100" translatesAutoresizingMaskIntoConstraints="NO" id="a66-DM-Tr2">
+                                                    <rect key="frame" x="0.0" y="0.0" width="105" height="80"/>
+                                                    <color key="backgroundColor" red="0.99990516901016235" green="1" blue="0.99987047910690308" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="80" id="PnZ-md-Zxv"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="e2V-VI-sjG">
+                                                    <rect key="frame" x="0.0" y="80" width="105" height="25"/>
+                                                    <color key="backgroundColor" red="1" green="0.34509803921568627" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <fontDescription key="fontDescription" name="ArialRoundedMTBold" family="Arial Rounded MT Bold" pointSize="12"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </view>
+                                        <constraints>
+                                            <constraint firstItem="e2V-VI-sjG" firstAttribute="leading" secondItem="UgP-CN-Fgo" secondAttribute="leading" id="Eh3-EV-vkq"/>
+                                            <constraint firstAttribute="bottom" secondItem="e2V-VI-sjG" secondAttribute="bottom" id="HoF-dt-i26"/>
+                                            <constraint firstAttribute="trailing" secondItem="a66-DM-Tr2" secondAttribute="trailing" id="IXF-lb-MwR"/>
+                                            <constraint firstAttribute="trailing" secondItem="e2V-VI-sjG" secondAttribute="trailing" id="Wru-1Y-cd7"/>
+                                            <constraint firstItem="e2V-VI-sjG" firstAttribute="top" secondItem="a66-DM-Tr2" secondAttribute="bottom" id="oHJ-50-Yhf"/>
+                                            <constraint firstItem="a66-DM-Tr2" firstAttribute="leading" secondItem="UgP-CN-Fgo" secondAttribute="leading" id="ucB-Wy-cty"/>
+                                            <constraint firstItem="a66-DM-Tr2" firstAttribute="top" secondItem="UgP-CN-Fgo" secondAttribute="top" id="vvD-J8-txI"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="nameLbl" destination="e2V-VI-sjG" id="aoT-QT-7a5"/>
+                                            <outlet property="thumbImg" destination="a66-DM-Tr2" id="haV-xD-QYS"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="7IE-mr-0xF" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="20" id="25q-gn-M2n"/>
+                            <constraint firstItem="lPi-vt-0VD" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="7Zb-hQ-1C1"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="7IE-mr-0xF" secondAttribute="bottom" constant="20" id="8qY-TJ-5lF"/>
+                            <constraint firstAttribute="trailing" secondItem="7IE-mr-0xF" secondAttribute="trailing" constant="20" id="EFX-Yz-na4"/>
+                            <constraint firstItem="lPi-vt-0VD" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Hp4-QJ-Hh7"/>
+                            <constraint firstAttribute="trailing" secondItem="4pw-r5-yEr" secondAttribute="trailing" id="KF1-Ge-Qyq"/>
+                            <constraint firstItem="FJN-vk-1Jg" firstAttribute="top" secondItem="lPi-vt-0VD" secondAttribute="bottom" id="QFE-qX-VbW"/>
+                            <constraint firstAttribute="trailing" secondItem="FJN-vk-1Jg" secondAttribute="trailing" id="T9Q-W9-Acd"/>
+                            <constraint firstItem="7IE-mr-0xF" firstAttribute="top" secondItem="FJN-vk-1Jg" secondAttribute="bottom" constant="20" id="ZFj-XJ-kLV"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="4pw-r5-yEr" secondAttribute="bottom" id="el1-pN-O89"/>
+                            <constraint firstAttribute="trailing" secondItem="lPi-vt-0VD" secondAttribute="trailing" id="udC-Wm-Q6K"/>
+                            <constraint firstItem="4pw-r5-yEr" firstAttribute="top" secondItem="FJN-vk-1Jg" secondAttribute="bottom" id="xMo-g3-MRo"/>
+                            <constraint firstItem="FJN-vk-1Jg" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="z1e-XD-m0d"/>
+                            <constraint firstItem="4pw-r5-yEr" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="zSw-aS-wKZ"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="collection" destination="7IE-mr-0xF" id="dIt-cU-qaR"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-150" y="124"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="100" width="120" height="120"/>
+        <image name="bg" width="1920" height="1080"/>
+    </resources>
 </document>
